...

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/showAllTrips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_all_trips"
                android:textSize="11sp" />
        </LinearLayout>

...
