...
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchListingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_listing_label" />

            <Space
                android:layout_width="20dp"
...
